tests/error/error11.nex
class A
{
   var a;
   var b;
   var a;
}

new A;
